tests/snapshots/compiler_error_fixtures/primop_clock_now_missing_time.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/primop_clock_now_missing_time.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
