tests/snapshots/compiler_error_fixtures/primop_read_file_missing_io.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/primop_read_file_missing_io.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
