tests/snapshots/compiler_error_fixtures/rigid_var_escape_e305.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/rigid_var_escape_e305.flx
== compile ==
failed (compile)
== diagnostics ==
error[E305]: Rigid Type Variable Escape

Rigid type variable `a` cannot be unified with `Int`.

  examples/compiler_errors/rigid_var_escape_e305.flx:11:5
   |
11 |     x + 1
   |     ^^^^^
   |     ----- forces `a` to become `Int`

   |     ----- this type mismatch is reported here

Note:
  the conflicting types meet at this expression
== stdout ==
<not executed>
