tests/snapshots/compiler_error_fixtures/type_mismatch_argument.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/type_mismatch_argument.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `greet`.

  examples/compiler_errors/type_mismatch_argument.flx:6:25
  |
1 | fn greet(name: String) -> String {
2 |     name
3 | }
4 | 
5 | fn main() -> Unit {
6 |     let ignored = greet(123)
  |                         ^^^
  |                         --- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
